--- a/src/components/copyright/copyright.scss
+++ b/src/components/copyright/copyright.scss
@@ -1,5 +1,5 @@
 .copyright {
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   margin: 0;
   color: transparentize($contentColor, 0.25);
   font-size: 14px;
