--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 1px;
     background: transparentize($contentColor, 0.9);
-    content: "";
+    content: '';
   }
 
   &--short {
