--- a/src/components/pie-chart/pie-chart.scss
+++ b/src/components/pie-chart/pie-chart.scss
@@ -50,7 +50,7 @@
     position: absolute;
     top: 3px;
     left: 0;
-    content: "";
+    content: '';
     width: 10px;
     height: 10px;
     border-radius: 50%;
