--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -15,7 +15,7 @@ $accentSecondGradColor: #66d2ea;
     width: 50px;
     margin: 0;
     margin-right: 2px;
-    font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+    font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
     font-style: normal;
     font-weight: normal;
     color: transparentize($contentColor, 0.55);
@@ -78,7 +78,7 @@ $accentSecondGradColor: #66d2ea;
   display: inline-block;
   margin: 0;
   margin-right: 8px;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-style: normal;
   font-weight: normal;
   color: transparentize($contentColor, 0.55);
@@ -93,7 +93,7 @@ $accentSecondGradColor: #66d2ea;
       position: absolute;
       top: 0;
       right: -7.5px;
-      content: "-";
+      content: '-';
       font-size: 10px;
     }
   }
@@ -107,7 +107,7 @@ $accentSecondGradColor: #66d2ea;
   margin: 0;
   font-size: 12px;
   line-height: 15px;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
