--- a/src/components/register-card/register-card.scss
+++ b/src/components/register-card/register-card.scss
@@ -24,7 +24,7 @@
     margin-bottom: 5px;
     font-size: 12px;
     line-height: 15px;
-    font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+    font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
     font-style: normal;
     font-weight: bold;
     text-transform: uppercase;
@@ -64,7 +64,7 @@
   justify-content: space-between;
   align-items: flex-start;
   margin-top: 30px;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
 
   .button {
     padding: 13px 24px;
