--- a/src/components/text-content/text-content.scss
+++ b/src/components/text-content/text-content.scss
@@ -1,7 +1,7 @@
 .text-content__title {
   margin: 0;
   margin-bottom: 20px;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
@@ -10,7 +10,7 @@
 
 .text-content__paragraph {
   margin: 0;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   color: transparentize($contentColor, 0.25);
   font-size: 14px;
   line-height: 24px;
