--- a/src/components/typograph/typograph.scss
+++ b/src/components/typograph/typograph.scss
@@ -6,7 +6,7 @@
 
 .typograph__label {
   margin: 0;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-size: 24px;
   color: transparentize($contentColor, 0.75);
   text-align: right;
@@ -29,7 +29,7 @@
 
 .typograph__title {
   margin: 0;
-  font-family: "Quicksand", "Montserrat", "Arial", sans-serif;
+  font-family: 'Quicksand', 'Montserrat', 'Arial', sans-serif;
   font-size: 24px;
   line-height: 30px;
   font-weight: bold;
@@ -48,7 +48,7 @@
 
 .typograph__text {
   margin: 0;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-size: 14px;
   line-height: 23px;
   color: transparentize($contentColor, 0.25);
