--- a/src/page/cards/cards.scss
+++ b/src/page/cards/cards.scss
@@ -1,16 +1,16 @@
-@import "../../style/utils/variables.scss";
-@import "../../components/date-wishes/date-wishes.scss";
-@import "../../components/date-picker/date-picker.scss";
-@import "../../components/total-card/total-card";
-@import "../../components/register-card/register-card";
-@import "../../components/auth-card/auth-card";
-@import "../../components/hotel-card/hotel-card";
-@import "../../components/input/input";
-@import "../../components/radiobtn/radiobtn";
-@import "../../components/toggle/toggle";
-@import "../../components/button/button";
-@import "../../components/ratebtn/ratebtn";
-@import "../../components/logo/logo";
+@import '../../style/utils/variables.scss';
+@import '../../components/date-wishes/date-wishes.scss';
+@import '../../components/date-picker/date-picker.scss';
+@import '../../components/total-card/total-card';
+@import '../../components/register-card/register-card';
+@import '../../components/auth-card/auth-card';
+@import '../../components/hotel-card/hotel-card';
+@import '../../components/input/input';
+@import '../../components/radiobtn/radiobtn';
+@import '../../components/toggle/toggle';
+@import '../../components/button/button';
+@import '../../components/ratebtn/ratebtn';
+@import '../../components/logo/logo';
 
 .cards-page {
   background: #f4f4f6;
