--- a/src/page/form-elements/form-elements.scss
+++ b/src/page/form-elements/form-elements.scss
@@ -1,20 +1,20 @@
-@import "../../style/utils/variables.scss";
-@import "../../components/checkbox/checkbox";
-@import "../../components/radiobtn/radiobtn";
-@import "../../components/toggle/toggle";
-@import "../../components/likebtn/likebtn";
-@import "../../components/ratebtn/ratebtn";
-@import "../../components/range-slider/range-slider";
-@import "../../components/title/title";
-@import "../../components/input/input";
-@import "../../components/button/button";
-@import "../../components/pagination/pagination";
-@import "../../components/features/features";
-@import "../../components/bullet-list/bullet-list";
-@import "../../components/comment/comment";
-@import "../../components/drop-down/drop-down.scss";
-@import "../../components/logo/logo";
-@import "../../../node_modules/nouislider/distribute/nouislider.min.css";
+@import '../../style/utils/variables.scss';
+@import '../../components/checkbox/checkbox';
+@import '../../components/radiobtn/radiobtn';
+@import '../../components/toggle/toggle';
+@import '../../components/likebtn/likebtn';
+@import '../../components/ratebtn/ratebtn';
+@import '../../components/range-slider/range-slider';
+@import '../../components/title/title';
+@import '../../components/input/input';
+@import '../../components/button/button';
+@import '../../components/pagination/pagination';
+@import '../../components/features/features';
+@import '../../components/bullet-list/bullet-list';
+@import '../../components/comment/comment';
+@import '../../components/drop-down/drop-down.scss';
+@import '../../components/logo/logo';
+@import '../../../node_modules/nouislider/distribute/nouislider.min.css';
 
 .form-elements__wrap {
   padding-top: 62px;
