--- a/src/page/main/main.scss
+++ b/src/page/main/main.scss
@@ -1,22 +1,22 @@
-@import "../../style/utils/variables.scss";
-@import "../../components/header/header.scss";
-@import "../../components/logo/logo.scss";
-@import "../../components/button/button.scss";
-@import "../../components/main-menu/main-menu.scss";
-@import "../../components/date-wishes/date-wishes.scss";
-@import "../../components/date-picker/date-picker.scss";
-@import "../../components/drop-down/drop-down.scss";
-@import "../../components/input/input.scss";
-@import "../../components/footer/footer.scss";
-@import "../../components/nav-menu/nav-menu.scss";
-@import "../../components/text-content/text-content.scss";
-@import "../../components/social-buttons/social-buttons.scss";
-@import "../../components/copyright/copyright.scss";
+@import '../../style/utils/variables.scss';
+@import '../../components/header/header.scss';
+@import '../../components/logo/logo.scss';
+@import '../../components/button/button.scss';
+@import '../../components/main-menu/main-menu.scss';
+@import '../../components/date-wishes/date-wishes.scss';
+@import '../../components/date-picker/date-picker.scss';
+@import '../../components/drop-down/drop-down.scss';
+@import '../../components/input/input.scss';
+@import '../../components/footer/footer.scss';
+@import '../../components/nav-menu/nav-menu.scss';
+@import '../../components/text-content/text-content.scss';
+@import '../../components/social-buttons/social-buttons.scss';
+@import '../../components/copyright/copyright.scss';
 
 .index-block {
   box-sizing: border-box;
   height: 830px;
-  background-image: url("./interior.jpg");
+  background-image: url('./interior.jpg');
   background-repeat: no-repeat;
   background-position: center -69px;
 }
