--- a/src/page/rooms/rooms.scss
+++ b/src/page/rooms/rooms.scss
@@ -1,23 +1,23 @@
-@import "../../style/utils/variables.scss";
-@import "../../components/header/header.scss";
-@import "../../components/logo/logo.scss";
-@import "../../components/button/button.scss";
-@import "../../components/main-menu/main-menu.scss";
-@import "../../components/date-wishes/date-wishes.scss";
-@import "../../components/date-picker/date-picker.scss";
-@import "../../components/drop-down/drop-down.scss";
-@import "../../components/input/input.scss";
-@import "../../components/hotel-card/hotel-card.scss";
-@import "../../components/range-slider/range-slider.scss";
-@import "../../components/checkbox/checkbox.scss";
-@import "../../components/ratebtn/ratebtn.scss";
-@import "../../components/pagination/pagination.scss";
-@import "../../components/footer/footer.scss";
-@import "../../components/nav-menu/nav-menu.scss";
-@import "../../components/text-content/text-content.scss";
-@import "../../components/social-buttons/social-buttons.scss";
-@import "../../components/copyright/copyright.scss";
-@import "../../../node_modules/nouislider/distribute/nouislider.min.css";
+@import '../../style/utils/variables.scss';
+@import '../../components/header/header.scss';
+@import '../../components/logo/logo.scss';
+@import '../../components/button/button.scss';
+@import '../../components/main-menu/main-menu.scss';
+@import '../../components/date-wishes/date-wishes.scss';
+@import '../../components/date-picker/date-picker.scss';
+@import '../../components/drop-down/drop-down.scss';
+@import '../../components/input/input.scss';
+@import '../../components/hotel-card/hotel-card.scss';
+@import '../../components/range-slider/range-slider.scss';
+@import '../../components/checkbox/checkbox.scss';
+@import '../../components/ratebtn/ratebtn.scss';
+@import '../../components/pagination/pagination.scss';
+@import '../../components/footer/footer.scss';
+@import '../../components/nav-menu/nav-menu.scss';
+@import '../../components/text-content/text-content.scss';
+@import '../../components/social-buttons/social-buttons.scss';
+@import '../../components/copyright/copyright.scss';
+@import '../../../node_modules/nouislider/distribute/nouislider.min.css';
 
 .rooms-page {
   .pagination {
