--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -3,7 +3,7 @@
   margin-bottom: 18px;
   font-size: 12px;
   line-height: 15px;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -23,8 +23,8 @@
       right: 16px;
       width: 12px;
       height: 8px;
-      content: "";
-      background: url("../../components/checkbox/expand-more.png") no-repeat;
+      content: '';
+      background: url('../../components/checkbox/expand-more.png') no-repeat;
       cursor: pointer;
     }
   }
@@ -43,7 +43,7 @@
   padding-right: 0;
   font-size: 12px;
   line-height: 15px;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -66,7 +66,7 @@
   width: 264px;
 }
 
-.checkbox__item input[type="checkbox"] {
+.checkbox__item input[type='checkbox'] {
   display: none;
 }
 
@@ -87,7 +87,7 @@
     left: 0;
     width: 20px;
     height: 20px;
-    content: "";
+    content: '';
     background-color: transparent;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 4px;
@@ -95,7 +95,7 @@
   }
 
   &::after {
-    content: "";
+    content: '';
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -111,12 +111,12 @@
   }
 }
 
-.checkbox__item input[type="checkbox"]:checked + label::after {
+.checkbox__item input[type='checkbox']:checked + label::after {
   visibility: visible;
   opacity: 1;
 }
 
-.checkbox__item input[type="checkbox"]:checked + label::before {
+.checkbox__item input[type='checkbox']:checked + label::before {
   border-color: $accentColor;
 }
 
