--- a/src/components/date-picker/date-picker.scss
+++ b/src/components/date-picker/date-picker.scss
@@ -86,7 +86,7 @@
   transition: transform 0.2s ease;
 
   &--prev {
-    background-image: url("../../components/date-picker/arrow-back.svg");
+    background-image: url('../../components/date-picker/arrow-back.svg');
 
     &:active {
       transform: translateX(-5px);
@@ -94,7 +94,7 @@
   }
 
   &--next {
-    background-image: url("../../components/date-picker/arrow-back.svg");
+    background-image: url('../../components/date-picker/arrow-back.svg');
     transform: rotate(180deg);
 
     &:active {
@@ -138,11 +138,7 @@
   &--current {
     color: $mainColor !important;
     font-weight: bold;
-    background: linear-gradient(
-      180deg,
-      $accentSecondСolor,
-      $accentGradSecondСolor
-    );
+    background: linear-gradient(180deg, $accentSecondСolor, $accentGradSecondСolor);
   }
 
   &--select {
@@ -175,7 +171,7 @@
       transparentize($accentColor, 0.75),
       transparentize($accentGradColor, 0.75)
     );
-    content: "";
+    content: '';
   }
 }
 
