--- a/src/components/drop-down/drop-down.scss
+++ b/src/components/drop-down/drop-down.scss
@@ -93,7 +93,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    content: "+";
+    content: '+';
   }
 
   &--minus::after {
@@ -102,7 +102,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    content: "-";
+    content: '-';
   }
 
   &--disabled {
