--- a/src/components/radiobtn/radiobtn.scss
+++ b/src/components/radiobtn/radiobtn.scss
@@ -3,7 +3,7 @@
   margin-bottom: 18px;
   font-size: 12px;
   line-height: 15px;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -20,7 +20,7 @@
   }
 }
 
-.radiobtn__item input[type="radio"] {
+.radiobtn__item input[type='radio'] {
   display: none;
 }
 
@@ -41,7 +41,7 @@
     left: 0;
     width: 20px;
     height: 20px;
-    content: "";
+    content: '';
     background-color: transparent;
     border: 1px solid rgba(31, 32, 65, 0.25);
     border-radius: 50%;
@@ -49,7 +49,7 @@
   }
 
   &::after {
-    content: "";
+    content: '';
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -63,15 +63,15 @@
   }
 }
 
-.radiobtn__item input[type="radio"]:checked + label::after {
+.radiobtn__item input[type='radio']:checked + label::after {
   visibility: visible;
   opacity: 1;
 }
 
-.radiobtn__item input[type="radio"]:checked + label::before {
+.radiobtn__item input[type='radio']:checked + label::before {
   border-color: $accentColor;
 }
 
-.radiobtn__item input[type="radio"]:checked + label {
+.radiobtn__item input[type='radio']:checked + label {
   color: transparentize($contentColor, 0.25)
 }
