--- a/src/components/title/title.scss
+++ b/src/components/title/title.scss
@@ -3,7 +3,7 @@
   margin-bottom: 18px;
   font-size: 12px;
   line-height: 15px;
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -18,7 +18,7 @@
   margin: 0;
   padding-bottom: 4px;
   color: transparentize($contentColor, 0.55);
-  font-family: "Montserrat", "Quicksand", "Arial", sans-serif;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
   font-size: 12px;
   line-height: 15px;
   text-transform: uppercase;
