--- a/src/fonts/fonts.scss
+++ b/src/fonts/fonts.scss
@@ -1,39 +1,39 @@
 @font-face {
   font-weight: normal;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-style: normal;
-  src: url("../fonts/Montserrat-Regular.woff");
-  src: url("../fonts/Montserrat-Regular.woff") format("woff"),
-    url("../fonts/Montserrat-Regular.ttf") format("truetype"),
-    url("../fonts/Montserrat-Regular.font.svg#webfont") format("svg");
+  src: url('../fonts/Montserrat-Regular.woff');
+  src: url('../fonts/Montserrat-Regular.woff') format('woff'),
+    url('../fonts/Montserrat-Regular.ttf') format('truetype'),
+    url('../fonts/Montserrat-Regular.font.svg#webfont') format('svg');
 }
 
 @font-face {
   font-weight: bold;
-  font-family: "Montserrat";
+  font-family: 'Montserrat';
   font-style: normal;
-  src: url("../fonts/Montserrat-Bold.woff");
-  src: url("../fonts/Montserrat-Bold.woff") format("woff"),
-    url("../fonts/Montserrat-Bold.ttf") format("truetype"),
-    url("../fonts/Montserrat-Bold.font.svg#webfont") format("svg");
+  src: url('../fonts/Montserrat-Bold.woff');
+  src: url('../fonts/Montserrat-Bold.woff') format('woff'),
+    url('../fonts/Montserrat-Bold.ttf') format('truetype'),
+    url('../fonts/Montserrat-Bold.font.svg#webfont') format('svg');
 }
 
 @font-face {
   font-weight: normal;
-  font-family: "Quicksand";
+  font-family: 'Quicksand';
   font-style: normal;
-  src: url("../fonts/Quicksand-Regular.woff");
-  src: url("../fonts/Quicksand-Regular.woff") format("woff"),
-    url("../fonts/Quicksand-Regular.ttf") format("truetype"),
-    url("../fonts/Quicksand-Regular.font.svg#webfont") format("svg");
+  src: url('../fonts/Quicksand-Regular.woff');
+  src: url('../fonts/Quicksand-Regular.woff') format('woff'),
+    url('../fonts/Quicksand-Regular.ttf') format('truetype'),
+    url('../fonts/Quicksand-Regular.font.svg#webfont') format('svg');
 }
 
 @font-face {
   font-weight: bold;
-  font-family: "Quicksand";
+  font-family: 'Quicksand';
   font-style: normal;
-  src: url("../fonts/Quicksand-Bold.woff");
-  src: url("../fonts/Quicksand-Bold.woff") format("woff"),
-    url("../fonts/Quicksand-Bold.ttf") format("truetype"),
-    url("../fonts/Quicksand-Bold.font.svg#webfont") format("svg");
+  src: url('../fonts/Quicksand-Bold.woff');
+  src: url('../fonts/Quicksand-Bold.woff') format('woff'),
+    url('../fonts/Quicksand-Bold.ttf') format('truetype'),
+    url('../fonts/Quicksand-Bold.font.svg#webfont') format('svg');
 }
