--- a/src/page/registration/registration.scss
+++ b/src/page/registration/registration.scss
@@ -1,21 +1,21 @@
-@import "../../style/utils/variables.scss";
-@import "../../components/header/header.scss";
-@import "../../components/logo/logo.scss";
-@import "../../components/button/button.scss";
-@import "../../components/main-menu/main-menu.scss";
-@import "../../components/register-card/register-card.scss";
-@import "../../components/input/input.scss";
-@import "../../components/radiobtn/radiobtn.scss";
-@import "../../components/toggle/toggle.scss";
-@import "../../components/footer/footer.scss";
-@import "../../components/nav-menu/nav-menu.scss";
-@import "../../components/text-content/text-content.scss";
-@import "../../components/social-buttons/social-buttons.scss";
-@import "../../components/copyright/copyright.scss";
+@import '../../style/utils/variables.scss';
+@import '../../components/header/header.scss';
+@import '../../components/logo/logo.scss';
+@import '../../components/button/button.scss';
+@import '../../components/main-menu/main-menu.scss';
+@import '../../components/register-card/register-card.scss';
+@import '../../components/input/input.scss';
+@import '../../components/radiobtn/radiobtn.scss';
+@import '../../components/toggle/toggle.scss';
+@import '../../components/footer/footer.scss';
+@import '../../components/nav-menu/nav-menu.scss';
+@import '../../components/text-content/text-content.scss';
+@import '../../components/social-buttons/social-buttons.scss';
+@import '../../components/copyright/copyright.scss';
 
 .registration-page {
   main {
-    background: url("room-interior.jpg") no-repeat;
+    background: url('room-interior.jpg') no-repeat;
     background-position: center -70px;
   }
 }
