--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,5 +1,6 @@
 .page-footer {
   position: relative;
+  flex: 0 0 auto;
   background-color: #fff;
   box-shadow: 0 10px 20px rgba(31, 32, 65, 0.05);
 
