--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -2,6 +2,11 @@
 @import 'utils/variables.scss';
 @import '../fonts/fonts.scss';
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   color: $contentColor;
   font-size: 14px;
@@ -15,6 +20,16 @@ body {
   max-width: 1920px;
   margin: 0 auto;
   padding: 0 10px;
+}
+
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+}
+
+.content {
+  flex: 1 0 auto;
 }
 
 @media (max-width: 1300px) {
