--- a/src/page/not-found/not-found.scss
+++ b/src/page/not-found/not-found.scss
@@ -17,6 +17,18 @@
   background-size: 28%;
 }
 
+@media (max-width: 768px) {
+  .not-found {
+    background-position: right bottom, left top;
+  }
+}
+
+@media (max-width: 425px) {
+  .not-found {
+    background-position: center bottom, center top;
+  }
+}
+
 .not-found__wrap {
   padding: 120px 0;
   text-align: center;
@@ -56,8 +68,8 @@
   font-size: 14px;
   line-height: 17px;
   text-decoration: none;
-  color: transparentize($contentColor, .5);
-  transition: color .4s ease;
+  color: transparentize($contentColor, 0.5);
+  transition: color 0.4s ease;
 
   &:hover {
     color: darken($accentColor, 10%);
