--- a/src/components/logo/logo.pug
+++ b/src/components/logo/logo.pug
@@ -3,7 +3,7 @@ mixin logo(options = {})
 
   if (options.isBig) 
     div(class="logo logo--big")
-      img(width="48" height="48" src="../../components/logo/logo.png" alt="toxin")
+      .logo__big-pict
   else
     div(class="logo")
       a(href="/" class="logo__link")
