--- a/src/components/auth-card/auth-card.scss
+++ b/src/components/auth-card/auth-card.scss
@@ -4,13 +4,6 @@
   border-radius: 4px;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
 
-  fieldset {
-    width: 320px;
-    margin-bottom: 20px;
-    padding: 0;
-    border: 0;
-  }
-
   .input-group {
     margin-bottom: 10px;
 
@@ -25,11 +18,33 @@
     padding-top: 14px;
     font-weight: normal;
   }
+
+  @media (max-width: 380px) {
+    width: 100%;
+    min-width: 320px;
+  }
 }
 
 .auth-card__wrap {
   padding: 30px;
   padding-top: 40px;
+}
+
+.auth-card__wrap .input-group__input {
+  @media (max-width: 380px) {
+    width: 100%;
+  }
+}
+
+.auth-card__fieldset {
+  width: 320px;
+  margin-bottom: 20px;
+  padding: 0;
+  border: 0;
+
+  @media (max-width: 380px) {
+    width: 100%;
+  }
 }
 
 .auth-card__title {
@@ -49,22 +64,5 @@
 
   .button {
     padding: 12px 18px;
-  }
-}
-
-@media (max-width: 380px) {
-  .auth-card {
-    width: 100%;
-    min-width: 320px;
-  }
-
-  .auth-card__wrap {
-    .input-group__input {
-      width: 100%;
-    }
-  }
-
-  .auth-card fieldset {
-    width: 100%;
   }
 }
