--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -11,6 +11,14 @@
     height: 1px;
     background: transparentize($contentColor, 0.9);
     content: '';
+
+    @media (max-width: 555px) {
+      bottom: 120px;
+    }
+
+    @media (max-width: 394px) {
+      bottom: 135px;
+    }
   }
 
   &--short {
@@ -26,6 +34,57 @@
 
   &--border-top {
     border-top: 1px solid transparentize($contentColor, 0.75);
+  }
+
+  .text-content {
+    width: 260px;
+  }
+
+  .text-content__title {
+    margin-bottom: 19px;
+
+    @media (max-width: 768px) {
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+      font-size: 14px;
+      border-bottom: 2px solid $contentColor;
+    }
+  }
+
+  .nav-menu__title {
+    margin-bottom: 22px;
+
+    @media (max-width: 768px) {
+      margin-bottom: 10px;
+      font-size: 14px;
+    }
+  }
+
+  .nav-menu__item {
+    margin-bottom: 21px;
+
+    @media (max-width: 768px) {
+      margin-bottom: 10px;
+    }
+  }
+
+  .logo {
+    margin-bottom: 18px;
+  }
+
+  .input-group {
+    margin-top: 23px;
+  }
+
+  .input-group__input--button-split {
+    width: 216px;
+  }
+}
+
+.page-footer__wrap {
+  @media (max-width: 425px) {
+    padding-right: 20px;
+    padding-left: 20px;
   }
 }
 
@@ -48,6 +107,17 @@
 .page-footer__content {
   display: flex;
   padding: 101px 0 96px;
+
+  @media (max-width: 1100px) {
+    padding-top: 50px;
+    padding-bottom: 50px;
+  }
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    padding-top: 30px;
+    padding-bottom: 40px;
+  }
 }
 
 .page-footer__col-group {
@@ -55,6 +125,102 @@
   flex-grow: 1;
   justify-content: space-between;
   padding-top: 2px;
+
+  @media (max-width: 1100px) {
+    flex-wrap: wrap;
+  }
+
+  .page-footer__col {
+    @media (max-width: 1100px) {
+      box-sizing: border-box;
+      width: 50%;
+      margin-bottom: 40px;
+    }
+
+    @media (max-width: 768px) {
+      width: 100%;
+      margin-bottom: 40px;
+    }
+
+    &:first-child {
+      @media (width: 1440px) {
+        margin-right: 57px;
+      }
+    }
+
+    &:nth-child(3) {
+      @media (max-width: 1100px) {
+        margin-bottom: 0;
+      }
+
+      @media (max-width: 768px) {
+        margin-bottom: 30px;
+      }
+    }
+
+    &:last-child {
+      @media (max-width: 1100px) {
+        margin-bottom: 0;
+      }
+    }
+  }
+}
+
+.page-footer__col {
+  &--large:first-child {
+    margin-right: 3.5%;
+  }
+
+  .text-content {
+    @media (max-width: 1100px) {
+      width: 85%;
+    }
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
+  }
+
+  .input-group__input {
+    @media (max-width: 1100px) {
+      width: 83.07%;
+    }
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
+  }
+
+  &:nth-child(2) {
+    @media (width: 1440px) {
+      margin-right: 93px;
+    }
+  }
+
+  &:last-child {
+    @media (width: 1440px) {
+      margin-left: auto;
+    }
+  }
+}
+
+.page-footer__content > .page-footer__col {
+  @media (max-width: 1100px) {
+    box-sizing: border-box;
+    width: 240px;
+    margin-right: 14%;
+  }
+
+  @media (max-width: 768px) {
+    width: 100%;
+    margin-bottom: 40px;
+  }
+
+  .text-content {
+    @media (max-width: 1100px) {
+      width: 100%;
+    }
+  }
 }
 
 .page-footer__side-info {
@@ -63,185 +229,15 @@
   align-items: center;
   justify-content: space-between;
   padding: 29px 0;
-}
 
-.page-footer .text-content {
-  width: 260px;
-}
-
-.page-footer .text-content__title {
-  margin-bottom: 19px;
-}
-
-.page-footer .nav-menu__title {
-  margin-bottom: 22px;
-}
-
-.page-footer .nav-menu__item {
-  margin-bottom: 21px;
-}
-
-.page-footer .logo {
-  margin-bottom: 18px;
-}
-
-.page-footer .input-group {
-  margin-top: 23px;
-}
-
-.page-footer .input-group__input--button-split {
-  width: 216px;
-}
-
-.page-footer__col--large:first-child {
-  margin-right: 3.5%;
-}
-
-@media (width: 1440px) {
-  .page-footer__col {
-    &:nth-child(2) {
-      margin-right: 93px;
-    }
-
-    &:last-child {
-      margin-left: auto;
-    }
-  }
-
-  .page-footer__col-group {
-    .page-footer__col:first-child {
-      margin-right: 57px;
-    }
-  }
-}
-
-@media (max-width: 1100px) {
-  .page-footer__col-group {
-    flex-wrap: wrap;
-
-    .page-footer__col {
-      box-sizing: border-box;
-      width: 50%;
-      margin-bottom: 40px;
-
-      &:nth-child(3) {
-        margin-bottom: 0;
-      }
-
-      &:last-child {
-        margin-bottom: 0;
-
-        .text-content {
-          width: 85%;
-        }
-
-        .input-group__input {
-          width: 83.07%;
-        }
-      }
-    }
-  }
-
-  .page-footer__content > .page-footer__col {
-    box-sizing: border-box;
-    width: 240px;
-    margin-right: 14%;
-
-    .text-content {
-      width: 100%;
-    }
-  }
-
-  .page-footer__content {
-    padding-top: 50px;
-    padding-bottom: 50px;
-  }
-}
-
-@media (max-width: 768px) {
-  .page-footer {
-    .nav-menu__title {
-      margin-bottom: 10px;
-      font-size: 14px;
-    }
-
-    .nav-menu__item {
-      margin-bottom: 10px;
-    }
-
-    .text-content__title {
-      margin-bottom: 10px;
-      padding-bottom: 10px;
-      font-size: 14px;
-      border-bottom: 2px solid $contentColor;
-    }
-  }
-
-  .page-footer__content {
+  @media (max-width: 555px) {
     flex-direction: column;
-    padding-top: 30px;
-    padding-bottom: 40px;
   }
 
-  .page-footer__content > .page-footer__col {
-    width: 100%;
-    margin-bottom: 40px;
-  }
-
-  .page-footer__col-group {
-    .page-footer__col {
-      width: 100%;
-      margin-bottom: 40px;
-
-      &:nth-child(3) {
-        margin-bottom: 30px;
-      }
-
-      &:last-child {
-        .text-content {
-          width: 100%;
-        }
-
-        .input-group {
-          margin-top: 20px;
-        }
-      }
-    }
-  }
-
-  .page-footer__col .input-group__split {
-    justify-content: center;
-  }
-}
-
-@media (max-width: 555px) {
-  .page-footer {
-    &::after {
-      bottom: 120px;
-    }
-  }
-
-  .page-footer__side-info {
-    flex-direction: column;
-
-    .copyright {
+  .copyright {
+    @media (max-width: 555px) {
       margin-bottom: 20px;
       text-align: center;
     }
-  }
-}
-
-@media (max-width: 394px) {
-  .page-footer {
-    &::after {
-      bottom: 135px;
-    }
-  }
-}
-
-@media (max-width: 425px) {
-  .page-footer__wrap {
-    padding-right: 20px;
-    padding-left: 20px;
   }
 }
