--- a/src/components/auth-card/auth-card.pug
+++ b/src/components/auth-card/auth-card.pug
@@ -6,7 +6,7 @@ mixin authCard()
     .auth-card__wrap
       form(action="/404.html")
         h2.auth-card__title Войти
-        fieldset
+        fieldset.auth-card__fieldset
           +input({ id: "Email2", placeholder: "Email",  type: "email", })
           +input({ id: "pass2", placeholder: "Пароль",  type: "password", })
         +button({ title: "Войти", isHaveIcon: true, buttonType: "submit" })
