--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,6 +9,11 @@
   display: flex;
   flex-wrap: wrap;
   padding: 17px 0 15px;
+
+  @media (max-width: 425px) {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
 }
 
 .page-header__auth {
@@ -21,6 +26,11 @@
     position: relative;
     padding-left: 20px;
 
+    @media (max-width: 380px) {
+      margin-right: 10px;
+      padding-right: 0;
+    }
+
     &::before {
       position: absolute;
       left: 0;
@@ -29,7 +39,27 @@
       background: $contentColor;
       opacity: 0.1;
       content: '';
+
+      @media (max-width: 1024px) {
+        left: auto;
+        right: 0;
+      }
+
+      @media (max-width: 380px) {
+        display: none;
+      }
     }
+
+    @media (max-width: 1024px) {
+      margin-right: 20px;
+      padding-left: 0;
+      padding-right: 20px;
+    }
+  }
+
+  @media (max-width: 1024px) {
+    order: 2;
+    margin-left: auto;
   }
 }
 
@@ -38,68 +68,8 @@
   display: none;
   visibility: hidden;
   opacity: 0;
-}
 
-.page-header__auth .button {
-  margin-right: 20px;
-
-  &:nth-child(2) {
-    margin-right: 0;
-    padding-left: 18px;
-    letter-spacing: 0.3px;
-  }
-}
-
-.page-header__user-name {
-  margin: 0;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
-  color: $contentColor;
-  opacity: 0.5;
-}
-
-.page-header__auth-profile {
-  display: none;
-}
-
-@media (max-width: 1024px) {
-  .page-header__auth {
-    order: 2;
-    margin-left: auto;
-
-    &--is-auth {
-      margin-right: 20px;
-      padding-left: 0;
-      padding-right: 20px;
-
-      &::before {
-        left: auto;
-        right: 0;
-      }
-    }
-  }
-
-  .page-header__auth > .button {
-    display: none;
-  }
-
-  .page-header__auth-profile {
-    position: absolute;
-    right: 40px;
-    display: block;
-    box-sizing: border-box;
-    width: 24px;
-    height: 24px;
-    background: url('../../components/header/user.svg') no-repeat;
-    border: none;
-    cursor: pointer;
-    content: '';
-
-    &--hide {
-      display: none;
-    }
-  }
-
-  .page-header__auth-list {
+  @media (max-width: 1024px) {
     position: absolute;
     z-index: 100;
     top: 55px;
@@ -112,22 +82,30 @@
     transform: translate(-50%, -10px);
     visibility: hidden;
     transition: all 0.3s ease-in-out;
+  }
 
-    &--active {
+  &--active {
+    @media (max-width: 1024px) {
       transform: translate(-50%, 0);
       visibility: visible;
       opacity: 1;
     }
+  }
 
-    .page-header__auth-item {
+  .page-header__auth-item {
+    @media (max-width: 1024px) {
       width: 100%;
+    }
 
-      &:last-child {
+    &:last-child {
+      @media (max-width: 1024px) {
         box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.2);
       }
     }
+  }
 
-    a {
+  a {
+    @media (max-width: 1024px) {
       display: inline-block;
       width: 100%;
       padding: 20px 0;
@@ -136,30 +114,61 @@
       text-decoration: none;
       vertical-align: top;
       border-top: 1px solid transparentize($contentColor, 0.75);
+    }
+  }
 
-      &:hover {
-        color: darken($accentColor, 10%);
-      }
+  a:hover {
+    @media (max-width: 1024px) {
+      color: darken($accentColor, 10%);
     }
   }
 }
 
-@media (max-width: 425px) {
-  .page-header__wrap {
-    padding-right: 20px;
-    padding-left: 20px;
-  }
+.page-header__auth .button {
+  margin-right: 20px;
 
-  .page-header__auth-profile {
-    right: 60px;
+  &:nth-child(2) {
+    margin-right: 0;
+    padding-left: 18px;
+    letter-spacing: 0.3px;
   }
 }
 
-@media (max-width: 380px) {
-  .page-header__auth--is-auth {
-    margin-right: 10px;
-    padding-right: 0;
-    &::before {
+.page-header__auth > .button {
+  @media (max-width: 1024px) {
+    display: none;
+  }
+}
+
+.page-header__user-name {
+  margin: 0;
+  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  color: $contentColor;
+  opacity: 0.5;
+}
+
+.page-header__auth-profile {
+  display: none;
+
+  @media (max-width: 1024px) {
+    position: absolute;
+    right: 40px;
+    display: block;
+    box-sizing: border-box;
+    width: 24px;
+    height: 24px;
+    background: url('../../components/header/user.svg') no-repeat;
+    border: none;
+    cursor: pointer;
+    content: '';
+  }
+
+  @media (max-width: 425px) {
+    right: 60px;
+  }
+
+  &--hide {
+    @media (max-width: 1024px) {
       display: none;
     }
   }
