--- a/src/components/total-card/total-card.scss
+++ b/src/components/total-card/total-card.scss
@@ -4,6 +4,12 @@
   border-radius: 4px;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.2);
 
+  @media (max-width: 380px) {
+    width: 100%;
+    min-width: 320px;
+    margin: 0 auto;
+  }
+
   .button {
     width: 100%;
     padding: 15px 20px;
@@ -14,6 +20,24 @@
   position: relative;
   padding: 30px;
   padding-top: 40px;
+
+  .total-card__date-inputs {
+    @media (max-width: 380px) {
+      flex-direction: column;
+    }
+  }
+
+  .total-card__date-inputs .input-group {
+    @media (max-width: 380px) {
+      margin-bottom: 15px;
+    }
+  }
+
+  .total-card__date-inputs .input-group__input--button-split {
+    @media (max-width: 380px) {
+      width: 100%;
+    }
+  }
 }
 
 .total-card__head {
@@ -155,58 +179,4 @@
 
 .total-card__total-price {
   text-align: right;
-}
-
-@media (max-width: 380px) {
-  .total-card {
-    width: 100%;
-    min-width: 320px;
-    margin: 0 auto;
-  }
-
-  .total-card__wrap {
-    .total-card__date-inputs {
-      flex-direction: column;
-    }
-
-    .total-card__date-inputs .input-group {
-      margin-bottom: 15px;
-    }
-
-    .input-group__input--button-split {
-      width: 100%;
-    }
-  }
-
-  .total-card__calc-item--mbx {
-    .total-card__calc-text--extend {
-      width: 67%;
-    }
-  }
-
-  .total-card__calc-text--lhs {
-    width: 67%;
-  }
-
-  .total-card__total::after {
-    width: 58%;
-  }
-}
-
-@media (max-width: 360px) {
-  .total-card__total::after {
-    width: 55%;
-  }
-}
-
-@media (max-width: 335px) {
-  .total-card__total::after {
-    width: 53%;
-  }
-}
-
-@media (max-width: 320px) {
-  .total-card__total::after {
-    width: 48%;
-  }
 }
