удалил кавычки у названия шрифтов без пробелов

--- a/src/components/auth-card/auth-card.scss
+++ b/src/components/auth-card/auth-card.scss
@@ -60,7 +60,7 @@
   justify-content: space-between;
   align-items: flex-start;
   margin-top: 30px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
 
   .button {
     padding: 12px 18px;
