--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -3,7 +3,7 @@
   margin-bottom: 18px;
   font-size: 12px;
   line-height: 15px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -43,7 +43,7 @@
   padding-right: 0;
   font-size: 12px;
   line-height: 15px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
