--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -142,7 +142,7 @@
 
 .page-header__user-name {
   margin: 0;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   color: $contentColor;
   opacity: 0.5;
 }
