--- a/src/components/nav-menu/nav-menu.scss
+++ b/src/components/nav-menu/nav-menu.scss
@@ -1,14 +1,14 @@
 .nav-menu__list {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   list-style: none;
 }
 
 .nav-menu__title {
   margin: 0;
   margin-bottom: 20px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-weight: bold;
   font-size: 12px;
   line-height: 15px;
