--- a/src/page/room-details/room-details.scss
+++ b/src/page/room-details/room-details.scss
@@ -75,7 +75,7 @@
 
 .room-details__title-alt {
   padding-top: 2px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 14px;
   font-weight: normal;
   color: transparentize($contentColor, 0.5);
@@ -187,7 +187,7 @@
 .room-details__info p {
   width: 100%;
   margin: 0;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-size: 14px;
   line-height: 24px;
   color: transparentize($contentColor, 0.25);
