--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -3,7 +3,7 @@
   margin-bottom: 14px;
   font-size: 12px;
   line-height: 15px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -22,7 +22,7 @@
   position: relative;
   padding-left: 21px;
   margin-bottom: 10px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   color: transparentize($contentColor, 0.25);
   font-size: 14px;
   line-height: 24px;
