--- a/src/components/hotel-card/hotel-card.scss
+++ b/src/components/hotel-card/hotel-card.scss
@@ -147,13 +147,13 @@
 }
 
 .hotel-card__text {
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   margin: 0;
   font-size: 12px;
   color: transparentize($contentColor, 0.5);
 
   b {
-    font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
     font-size: 14px;
   }
 }
