--- a/src/components/likebtn/likebtn.scss
+++ b/src/components/likebtn/likebtn.scss
@@ -3,7 +3,7 @@
   margin-bottom: 16px;
   font-size: 12px;
   line-height: 15px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -31,7 +31,7 @@
   padding-right: 12px;
   content: '';
   color: transparentize($contentColor, 0.55);
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-weight: normal;
   font-size: 10px;
   line-height: 12px;
