--- a/src/components/pagination/pagination.scss
+++ b/src/components/pagination/pagination.scss
@@ -3,7 +3,7 @@
   margin-bottom: 16px;
   font-size: 12px;
   line-height: 15px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
@@ -27,7 +27,7 @@
     text-align: center;
     vertical-align: middle;
     color: transparentize($contentColor, 0.5);
-    font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
     font-weight: normal;
     font-size: 12px;
     line-height: 15px;
@@ -83,7 +83,7 @@
   padding-left: 6px;
 
   p {
-    font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+    font-family: Montserrat, Quicksand, Arial, sans-serif;
     margin: 0;
     margin-top: 7px;
     font-size: 14px;
