--- a/src/components/ratebtn/ratebtn.scss
+++ b/src/components/ratebtn/ratebtn.scss
@@ -3,7 +3,7 @@
   margin-bottom: 18px;
   font-size: 12px;
   line-height: 15px;
-  font-family: 'Montserrat', 'Quicksand', 'Arial', sans-serif;
+  font-family: Montserrat, Quicksand, Arial, sans-serif;
   font-style: normal;
   font-weight: bold;
   text-transform: uppercase;
