--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -10,7 +10,7 @@ body {
 body {
   color: $contentColor;
   font-size: 14px;
-  font-family: 'Quicksand', 'Montserrat', 'Arial', sans-serif;
+  font-family: Quicksand, Montserrat, Arial, sans-serif;
 }
 
 .container {
